careers/careers/static/css/position.css
/*  -------------------------------------------------------------------
    Position
    ------------------------------------------------------------------- */

#job {
    overflow: hidden; _overflow: visible; zoom: 1; /* clear fix */
    padding: 100px 0 0 0;
    background: #fff url(/static/img/position-strip-mobile.jpg) repeat-x;
    font-size: 15px;
}

#job-post-head-spacer { display: none; }

.job-post-title {
    margin: 0;
    font-family: 'Zilla', serif;
    font-size: 26px;
}

.cta.job-post-head-apply {
    display: none;
}

.job-post-details {
    margin: 10px 0;
    border-top: 1px solid #deddd3;
    border-bottom: 1px solid #deddd3;
    padding: 10px 0 0 0;
}

.job-post-details > dt {
    font-family: 'Open Sans Light',sans-serif;
    font-size: 13px;
    line-height: 18px;
    text-transform: uppercase;
}

.job-post-details > dd {
    margin-left: 0;
    margin-bottom: 10px;
    line-height: 18px;
}

.job-post-description {
    margin: 20px 0;
}


.job-post-description h4 {
    font-weight: bold;
    font-size: 16px;
    line-height: 1.5;
}


.job-related {
    display: none;
}

@media (min-width: 681px) {

    #job {
        background-image: url(/static/img/position-strip-tablet.jpg);
        padding-top: 190px;
    }

    #job .contain {
        position: relative;
    }

    .job-post-head {
        position: relative;
    }

    .job-post-title {
        max-width: 70%;
    }

    .cta.job-post-head-apply {
        position: absolute;
        bottom: 51px;
        right: 20px;
        display: block;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
        width: 22%;
        width: -webkit-calc(25% - 20px);
        width: calc(25% - 20px);
        min-width: 0;
        padding-left: 0;
        padding-right: 0;
        font-size: 13px;
    }

    .job-post-details {
        overflow: hidden; _overflow: visible; zoom: 1; /* clear fix */
        position: relative;
        margin-bottom: 20px;
    }

    .job-post-details > dt {
        position: absolute;
        top: 11px;
        left: 0;
    }

        .job-post-details > .job-post-location-head {
            left: 35%;
        }

    .job-post-details > dd {
       -moz-box-sizing: border-box;
            box-sizing: border-box;
       float: left;
       width: 35%;
       padding-left: 43px;
       padding-right: 10px;
    }

        .job-post-details > .job-post-location {
            width: 65%;
            padding-left: 83px;
        }

    .job-post-description {
        width: 75%;
        max-width: 620px;
        float: left;
        margin-top: 10px;
    }

    .job-related {
        display: block;
        -moz-box-sizing: border-box;
             box-sizing:border-box;
        width: 25%;
        float: right;
        padding-left: 20px;
        color: #919299;
    }

        .job-related a:link,
        .job-related a:visited {
            color: #919299;
        }

        .job-related a:hover,
        .job-related a:focus,
        .job-related a:active {
            color: #0095dd;
            text-decoration: none;
        }

        .job-related-head {
            margin-top: 16px;
            font-size: 12px;
            font-weight: 600;
        }

        .job-related-list {
            list-style-type: none;
            padding-left: 0px;
            font-size: 12px;
        }

        .job-related-list > li {
            margin-bottom: 10px;
        }

    #job-post-apply {
        display: none;
    }
}

@media (min-width: 921px) {

    #job {
        background-image: url(/static/img/position-strip-desktop.jpg);
        padding-top: 260px;
    }

      #job-post.pin #job-post-head-spacer {
          display: block;
      }

     #job-post.pin .job-post-head {
        display: block;
        position: fixed;
        top: 100px;
        z-index: 1;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
        width: 100%;
        background-color: #fff;
     }

    .job-post-head {
        position: relative;
    }

     .cta.job-post-head-apply {
        bottom: 69px;
        font-size: 18px;
     }

    .job-post-details {
        margin-top: 15px;
        margin-bottom: 0;
        padding-top: 15px;
    }
        .job-post-details > dt {
            top: 16px;
        }

        .job-post-details > dd{
            margin-bottom: 15px;
        }

    .job-post-title {
        font-size: 38px;
    }

    .job-post-description {
        margin-top: 30px;
    }

    .job-related {
        margin-top: 20px;
    }

    .job-related-head {
        margin-top: 12px;
        font-size: 15px;
    }
    .job-related-list {
        font-size: 15px;
    }
}

@media (min-width: 980px) {
    #job-post.pin #job-post-pin-head {
        left: 50%;
        width: 980px;
        max-width: 1000px;
        margin-left: -490px;
    }
}

/*  -------------------------------------------------------------------
    Why Mozilla
    ------------------------------------------------------------------- */

#why{
    font-size: 15px;
}

.why-head {
    margin: 10px 0;
    font-family: 'Zilla', serif;
    font-size: 26px;
    font-weight: 600;
}

.why-intro {
    margin-bottom: 25px;
}

.why-intro > p {
    margin: 10px 0;
}

.why-reason-box > h3 {
    padding-top: 25px;
    background: url(/static/img/bg_stripes.gif) top left repeat-x;
    font-family: 'Zilla', serif;
    font-size: 20px;
}

.why-reason-box > ul {
    padding-left: 19px;
}

@media (min-width: 681px) {
    #why {
        padding: 30px 0;
    }

    .why-head {
        -moz-box-sizing: border-box;
             box-sizing: border-box;
        width: 33.3%;
        float: left;
        padding-right: 10px;
    }

    .why-intro {
        -moz-box-sizing: border-box;
             box-sizing: border-box;
        width: 66.6%;
        float: right;
        padding-left: 10px;
    }

    .why-reasons {
        overflow: hidden; _overflow: visible; zoom: 1; /* clear fix */
        clear: both;
        margin:0 -20px 0 0;
    }

    .why-reason-box {
        -moz-box-sizing: border-box;
             box-sizing: border-box;
        width: 33.3%;
        float: left;
        padding-right: 20px;
    }

}

